test_regress/t/t_udp_bad_multi_output.out
%Error: t/t_udp_bad_multi_output.v:8:15: 2 output ports for udp table, there must be one output port!
                                       : ... note: In instance 'top'
    8 | output dout1, dout2;
      |               ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
